--- a/tpInit/html/02_repereGUI.html
+++ b/tpInit/html/02_repereGUI.html
@@ -5,7 +5,7 @@
     <meta  charset="utf-8">
     <meta name="author" content="Lionel Garnier, Université de Bourgogne">
     <meta name="copyright" content="Lionel Garnier">
-    <title>Repère orthonormé direct avec une Intergace Graphique Utilisateur GUIlezgo</title>
+    <title>Repère orthonormé direct avec une Intergace Graphique Utilisateur GUIlezgoraciste</title>
     <script type="text/javascript" charset="UTF-8" src="../../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" src="../../libs/util/dat.gui.js"></script>
