--- a/tpInit/html/02_repereGUI.html
+++ b/tpInit/html/02_repereGUI.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="../../libs/util/util.js"></script>
     <script type="text/javascript" src="../js/GeometrieUtile.js"></script>
     <script type="text/javascript" src="../js/CameraLumiere.js"></script>
+    <script type="text/javascript" src="../js/Pierre.js"></script>
     <!--script type="text/javascript" src="../js/ModeleMateriaux.js"></script-->
     <script type="text/javascript" src="../js/02_repereGUI.js"></script>
     <link rel="stylesheet" href="../css/01_default.css">
