--- a/tpInit/html/02_repereGUI.html
+++ b/tpInit/html/02_repereGUI.html
@@ -22,6 +22,8 @@
 </head>
 
 
+<!--test meme ecriture ligne-->
+
 <body onload="init()">
     <div id="webgl"></div>
     <form id="controle" action="mailto:toto@wanadoo.fr" method="post">
