--- a/tpInit/html/02_repereGUI.html
+++ b/tpInit/html/02_repereGUI.html
@@ -25,28 +25,9 @@
     <div id="webgl"></div>
     <form id="controle" action="mailto:toto@wanadoo.fr" method="post">
       <fieldset>
-        <legend>Contrôle de la camara et affichage du repère</legend>
+        <legend>Scores des équipes</legend>
         <div>
-          <table id="TableauCamera">
-          <tr>
-            <th>Géométrie</th>
-            <th>Abscisse</th>
-            <th>Ordonnée</th>
-            <th>Cote</th>
-          </tr>
-          <tr>
-            <td>Position</td>
-            <td><input type="number" id="PosX"  name="PosX" min="-20" max="20" step="0.25" value="0"  /></td>
-            <td><input type="number" id="PosY"  name="PosY" min="-20" max="20" step="0.25" value="-4"  /></td>
-            <td><input type="number" id="PosZ"  name="PosZ" min="-20" max="20" step="0.25" value="0"  /></td>
-          </tr>
-          <tr>
-            <td>Direction</td>
-            <td><input type="number" id="DirX"  name="DirX" min="-20" max="20" step="0.25" value="0"  /></td>
-            <td><input type="number" id="DirY"  name="DirY" min="-20" max="20" step="0.25" value="0"  /></td>
-            <td><input type="number" id="DirZ"  name="DirZ" min="-20" max="20" step="0.25" value="0.5"  /></td>
-          </tr>
-          </table>
+          <!--À FAIRE : Ajouter le tableau des scores des équipes et un compteur de tir-->
         </div>
       </fieldset>
     </form>
