--- a/tpInit/html/02_repereGUI.html
+++ b/tpInit/html/02_repereGUI.html
@@ -28,6 +28,8 @@
         <legend>Scores des équipes</legend>
         <div>
           <!--À FAIRE : Ajouter le tableau des scores des équipes et un compteur de tir-->
+          <div id="score_rouge"></div>
+          <div id="score_bleu"></div>
         </div>
       </fieldset>
     </form>
