modification score HTML

--- a/tpInit/html/02_repereGUI.html
+++ b/tpInit/html/02_repereGUI.html
@@ -33,7 +33,7 @@
                 Score &eacute;quipe bleue :
               </td>
               <td id="score_bleu">
-                0
+                il faut au moins 2 tirs pour afficher les scores
               </td>
             </tr>
             <tr>
@@ -41,7 +41,7 @@
                 Score &eacute;quipe rouge :
               </td>
               <td id="score_rouge">
-                0
+                il faut au moins 2 tirs pour afficher les scores
               </td>
             </tr>
           </table>
